--- a/index.html
+++ b/index.html
@@ -323,15 +323,17 @@
   <div class="modal-content">
     <span class="close" id="closeUserModal">×</span>
     <h2>معلومات المستخدم</h2>
+
+      <div class="info-row">
+        <span class="info-label">الاسم:</span>
+        <span id="infoName" class="info-value"></span>
+      </div>
     <div class="user-info">
       <div class="info-row">
         <span class="info-label">اسم المستخدم:</span>
         <span id="infoUsername" class="info-value"></span>
       </div>
-      <div class="info-row">
-        <span class="info-label">الاسم:</span>
-        <span id="infoName" class="info-value"></span>
-      </div>
+    
       <div class="info-row">
         <span class="info-label">البريد الإلكتروني:</span>
         <span id="infoEmail" class="info-value"></span>
@@ -347,7 +349,7 @@
       </div>
     </div>
      <div class="info-row">
-        <span class="info-label">حالة التفعيل:</span>
+        <span class="info-label">حالة الحساب:</span>
         <span id="infoVerificationStatus" class="alert"></span>
       </div>
     <button class="btn btn-primary" id="logoutBtnModal">تسجيل الخروج</button>
