padding pre code

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 
   <ul class="level-items">
     <li class="course-item active" data-article="concepts/concepts"><i class="fa fa-database"></i><span>مفاهيم قواعد البيانات العلائقية</span></li>
-    <li class="course-item" data-article="concepts/sql-noSql"><i class="fa fa-code"></i><span>الفرق بين SQL و NoSQL</span></li>
-    <li class="course-item" data-article="concepts/DBMS"><i class="fa fa-comment-alt"></i><span>نظم إدارة قواعد البيانات</span></li>
-    <li class="course-item" data-article="concepts/install"><i class="fa fa-list-ol"></i><span>تثبيت الأدوات</span></li>
+    <li class="course-item" data-article="concepts/sql-noSql"><i class="fa-solid fa-table-columns"></i><span>الفرق بين SQL و NoSQL</span></li>
+    <li class="course-item" data-article="concepts/DBMS"><i class="fa-solid fa-gear"></i></i><span>نظم إدارة قواعد البيانات</span></li>
+    <li class="course-item" data-article="concepts/install"><i class="fa-solid fa-download"></i><span>تثبيت الأدوات</span></li>
   </ul>
 </div>
 
@@ -126,7 +126,7 @@
       </div>
 
   <ul class="level-items">
-    <li class="course-item active" data-article="basics/intro"><i class="fa fa-database"></i><span>مقدمة في SQL</span></li>
+    <li class="course-item active" data-article="basics/intro"><i class="fa-solid fa-sheet-plastic"></i><span>مقدمة في SQL</span></li>
     <li class="course-item" data-article="basics/syntax"><i class="fa fa-code"></i><span>قواعد SQL Syntax</span></li>
     <li class="course-item" data-article="basics/comments"><i class="fa fa-comment-alt"></i><span>التعليقات</span></li>
     <li class="course-item" data-article="basics/datatypes"><i class="fa fa-list-ol"></i><span>أنواع البيانات</span></li>
@@ -274,8 +274,8 @@
 
   <ul class="level-items">
     <li class="course-item" data-article="references/keywords"><i class="fa fa-key"></i><span>الكلمات المفتاحية</span></li>
-    <li class="course-item" data-article="references/functions"><i class="fa fa-function"></i><span>الدوال Functions</span></li>
-    <li class="course-item" data-article="references/examples"><i class="fa fa-code"></i><span>أمثلة عملية</span></li>
+    <li class="course-item" data-article="references/functions"><i class="fa fa-code"></i><span>الدوال Functions</span></li>
+    <li class="course-item" data-article="references/examples"><i class="fa-solid fa-expand"></i><span>أمثلة عملية</span></li>
     <li class="course-item" data-article="references/exercises"><i class="fa fa-dumbbell"></i><span>تمارين</span></li>
     <li class="course-item" data-article="references/quiz"><i class="fa fa-question-circle"></i><span>اختبارات</span></li>
   </ul>
@@ -295,7 +295,7 @@
     <li class="course-item" data-article="projects/project1"><i class="fa fa-star"></i><span>مشروع قاعدة بيانات بسيطة</span></li>
     <li class="course-item" data-article="projects/project2"><i class="fa fa-star"></i><span>نظام إدارة المحتوى</span></li>
     <li class="course-item" data-article="projects/project3"><i class="fa fa-star"></i><span>نظام حجز تذاكر</span></li>
-    <li class="course-item" data-article="codes"><i class="fa fa-star"></i><span>نظام حجز تذاكر</span></li>
+    <li class="course-item" data-article="codes"><i class="fa fa-star"></i><span>داش</span></li>
 
   </ul>
 </div>
