--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
   <ul class="level-items">
     <li class="course-item active" data-article="concepts/concepts"><i class="fa fa-database"></i><span>مفاهيم قواعد البيانات العلائقية</span></li>
-    <li class="course-item" data-article="concepts/sql-noSql"><i class="fa-solid fa-table-columns"></i><span>الفرق بين SQL و NoSQL</span></li>
-    <li class="course-item" data-article="concepts/DBMS"><i class="fa-solid fa-gear"></i></i><span>نظم إدارة قواعد البيانات</span></li>
+    <li class="course-item" data-article="concepts/sql-nosql"><i class="fa-solid fa-table-columns"></i><span>الفرق بين SQL و NoSQL</span></li>
+    <li class="course-item" data-article="concepts/dbms"><i class="fa-solid fa-gear"></i></i><span>نظم إدارة قواعد البيانات</span></li>
     <li class="course-item" data-article="concepts/install"><i class="fa-solid fa-download"></i><span>تثبيت الأدوات</span></li>
   </ul>
 </div>
